# Bug_Report_ITS

./: CMakeLists.txt  README.md
include/: Bug.h  BugReport.h  ChangeBug.h  Customer.h  Employee.h  Product.h  Release.h  Request.h  ScenarioControl.h
src/: Bug.cpp  BugReport.cpp  ChangeBug.cpp  Customer.cpp  Employee.cpp  Product.cpp  Release.cpp  Request.cpp  ScenarioControl.cpp  main.cpp
testing/: TestProduct.cpp  functionalTest.cpp  performanceTest.cpp  stressTest.cpp  testFilesOps.cpp  unitTestCustomer.cpp  unitTestMain.cpp
